--- a/source/AccessTokenValidation/packages.config
+++ b/source/AccessTokenValidation/packages.config
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IdentityModel" version="2.15.0" targetFramework="net452" />
+  <package id="IdentityModel" version="3.3.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Jwt" version="3.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.2.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.2.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.1" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.1" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
